Add instant startup, preset cache and offline queue